@@ -5,8 +5,7 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>3.3.1</version>
-    <relativePath></relativePath>
-    <!-- lookup parent from repository -->
+    <relativePath/>
   </parent>
   <groupId>com.mrlonis.example</groupId>
   <artifactId>example-spring-boot-maven-app</artifactId>
@@ -18,6 +17,7 @@
     <jackson.version>2.17.1</jackson.version>
     <java.version>21</java.version>
     <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
+    <maven-surefire-plugin.version>3.3.0</maven-surefire-plugin.version>
     <sortpom-maven-plugin.version>4.0.0</sortpom-maven-plugin.version>
     <spring-cloud.version>2023.0.2</spring-cloud.version>
     <versions-maven-plugin.version>2.16.2</versions-maven-plugin.version>
@@ -158,6 +158,7 @@
         <version>${sortpom-maven-plugin.version}</version>
         <configuration>
           <createBackupFile>false</createBackupFile>
+          <expandEmptyElements>false</expandEmptyElements>
           <lineSeparator>\n</lineSeparator>
           <keepBlankLines>false</keepBlankLines>
           <sortDependencies>scope,groupId,artifactId</sortDependencies>
@@ -202,6 +203,14 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven-surefire-plugin.version}</version>
+        <configuration>
+          <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
